feat: populate the notable untradeable-item allowlist with verified boss/skilling pets
Every name cross-checked one by one against the game's own cache item
definitions (exact name text, tradeable=false), not typed from memory
or copied from a wiki-disambiguated collection-log display name. A
first draft pulled from that source had inconsistent Title Case on
roughly a third of its entries, which would have silently never
matched a real drop.